--- a/src/main/resources/data/cobaltfoods/recipe/melon_snow_cone.json
+++ b/src/main/resources/data/cobaltfoods/recipe/melon_snow_cone.json
@@ -3,14 +3,13 @@
   "category": "food",
   "ingredients": [
     {
-      "item": "minecraft:sunflower"
+      "item": "cobaltfoods:unflavored_snow_cone"
     },
     {
-      "item": "minecraft:sunflower"
+      "item": "cobaltfoods:melon_juice"
     }
   ],
   "result": {
-    "count": 8,
-    "id": "cobaltfoods:sunflower_seeds"
+    "id": "cobaltfoods:melon_snow_cone"
   }
 }
